Update install.md